--- a/basic-parent/pom.xml
+++ b/basic-parent/pom.xml
@@ -215,6 +215,12 @@
 			<version>4.3.1</version>
 		</dependency>	
 		<!-- end http -->
+		
+		<dependency> 
+		    <groupId>org.redisson</groupId>
+		    <artifactId>redisson</artifactId>
+		    <version>2.8.2</version> 
+		</dependency>  
 
 		<!-- dubbox jar begin --> 
      <!--    <dependency>
